Sun Jan 25 04:53:48 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/logging/server/Logging_Server.h:
        * cuts/utils/logging/server/Logging_Server.inl:
        * cuts/utils/logging/server/Logging_Server.cpp:
        * cuts/utils/testing/svcs/logging/Test_Logging_Service.cpp:

          . Bug fix where the logger server was not up-to-date with the
            the new test manager, and where is stores the database. Now,
            the logging server determines the location of the archive
            via the -f, --file parameter, or being given a reference to
            an archive.

Sun Jan 25 01:23:42 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/workers/CPU/CPU_Worker.cpp:

          . Bug fix where the worker was parsing the CPU time correctly,
            but was checking the wrong bit for success.

Sun Jan 25 00:51:25 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/testing/Testing_App.cpp:
        * cuts/utils/testing/Testing_Service_Manager.cpp:

          . Added debug output.

        * examples/PICML/AntiSPAM/descriptors/hypothesis1/generate-and-run-test-all.sh:
        * examples/PICML/AntiSPAM/descriptors/hypothesis1/run-test-all.sh:
        * examples/PICML/AntiSPAM/descriptors/hypothesis1/run-test.sh:

          . Updated the scripts.

Sat Jan 24 22:34:33 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/lib/hypothesis1:
        * examples/PICML/AntiSPAM/lib/hypothesis1/inst1.cpu:
        * examples/PICML/AntiSPAM/lib/hypothesis1/inst2.cpu:
        * examples/PICML/AntiSPAM/lib/hypothesis1/inst3.cpu:
        * examples/PICML/AntiSPAM/lib/hypothesis1/inst4.cpu:
        * examples/PICML/AntiSPAM/lib/hypothesis1/inst5.cpu:
        * examples/PICML/AntiSPAM/lib/inst1.cpu:
        * examples/PICML/AntiSPAM/lib/inst2.cpu:
        * examples/PICML/AntiSPAM/lib/inst3.cpu:
        * examples/PICML/AntiSPAM/lib/inst4.cpu: